gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for gsymcheck (renamed gsymbol)

Most recent changes (version wise) are at the top of this file 

2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>

        * configure.in: Added -fnative-struct flag for CYGWIN port only

        * configure.in: Added --enable-debug flag to enable -g flag

2000-10-12  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/create_proto: Update with the latest version of this
	  script

2000-10-07  Ales Hvezda  <ahvezda@geda.seul.org>

	* configure.in: Removed an old GTK+ which is no longer used

2000-10-06  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/gsymcheck.c: Changed CYGWIN32 port warning

2000-07-04  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/*.c: Updated copyright info in each file

        * src/*.c: Changed all GNU to GPL in the appropriate places

	* configure.in: Bumped version up to 20000704

	* src/*.c: Fixed all warnings

2000-06-27  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/g_rc.c, src/g_register.c: Added component-library-search and
          source-library-search rc keywords

	* configure.in: Put in checks for gtk+ and glib 1.2.3

2000-06-01  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/s_project.c: Added init of some important variables which 
          libgeda uses when promoting attributes

	* src/create_proto: Updated to the latest working version (from
	  gschem/src)

2000-02-19  Ales Hvezda  <ahvezda@geda.seul.org>

        * README/INSTALL: Updated files to reflect next release

	* src/*.c: Fixed all warnings (using -Wall -Werror)

1999-10-17  Ales Hvezda  <ahvezda@geda.seul.org>

	* src/*.c: Changed all files to use the new libgeda/libgeda.h include

1999-10-10  Ales Hvezda  <ahvezda@geda.seul.org>

        * src/gsymcheck.c: Fixed up s_log_init to use the new prototype

1999-10-03  Ales Hvezda  <ahvezda@geda.seul.org>
