@@ -7,6 +7,18 @@ ChangeLog for gsymcheck (renamed gsymbol)
 
 Most recent changes (version wise) are at the top of this file 
 
+2000-12-02  Ales Hvezda  <ahvezda@geda.seul.org>
+
+        * src/gsymcheck.c: Changed Cygwin warning message
+
+	* src/src/g_rc.c: Misc changes to get this file to build with the 
+	  current cygwin
+
+	* src/src/parsecmd.c: Misc changes to get this file to build with the 
+	  current cygwin
+
+	* src/Makefile.am: Changed order of libraries in LDFLAGS line
+
 2000-11-30  Ales Hvezda  <ahvezda@geda.seul.org>
 
         * configure.in: Added -fnative-struct flag for CYGWIN port only
